[package]
name = "doinghisjob"
version = "0.1.0"
authors = ["Xephobia <nathanvalletmarseille@gmail.com>"]
edition = "2018"
description = "multi purpose bot written in rust"
license = "unlicense"
license-file = "LICENSE"
repository = "https://github.com/Xephobia/doinghisjob"
keywords = ["bot", "discord", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.2", features = ["rustls_backend", "framework", "standard_framework"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.62"
image = "0.23.14"
lingua = "1.2.0"
seamcarving = "0.2.3"
rand = "0.8.3"
hex = "0.4.3"
md-5 = "0.9.1"
sha-1 = "0.9.4"
sha2 = "0.9.3"
sha3 = "0.9.1"
chacha20 = "0.6.0"
num = "0.4.0"
anyhow = "1.0.41"